--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,10 @@
         <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
       {% endfor %}
     {% endif %}
+    <footer>
+      <p>
+        <a href="https://cassiodeveloper.com.br">Cássio B. Pereira</a>
+      </p>
+    </footer>    
   </body>
 </html>
