--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -33,6 +33,10 @@ body {
   overflow-wrap: break-word;
 }
 
+footer {
+  text-align: center;
+}
+
 .post-meta { text-align: right; }
 
 h2, h3, h4, h5, h6 { margin-top: 3rem; }
