--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     {% endif %}
     <footer>
       <p>
-        <a href="https://cassiodeveloper.com.br">Cássio B. Pereira</a>
+        <a href="https://cassiodeveloper.com.br/en">English version</a>
       </p>
     </footer>    
   </body>
