--- a/css/styles.css
+++ b/css/styles.css
@@ -3472,7 +3472,7 @@ td:last-child {
     object-fit    : cover;
     vertical-align: bottom;
     width         : 100%;
-    height        : 100%;
+    /* height        : 100%; */
     margin        : 0;
     padding       : 0;
 }
